style(hero): fixed alignments

--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -35,8 +35,9 @@
     @include flex(column, center, center, 2.5rem);
 
     grid-area: info;
+    margin-bottom: 2rem;
 
-    @media screen and (min-width: #{$breakpoint-s}px) {
+    @media screen and (min-width: #{$breakpoint-md}px) {
       @include flex(column, center, flex-start, 2.5rem);
     }
 
@@ -47,7 +48,7 @@
     .hero__btns {
       @include grid(center, center, 1rem);
 
-      @media screen and (min-width: #{$breakpoint-s}px) {
+      @media screen and (min-width: #{$breakpoint-lg}px) {
         grid-template-columns: repeat(2, minmax(0, 1fr));
         align-items: stretch;
         width: min(100%, 45rem);
